[package]
name = "wobblechar"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Paul Mourus <paul@mourus.com>"]
repository = "https://github.com/mous-design/wobblechar"
description = "Parse ASCII/UTF-8 waveform diagrams into a stream of decoded samples."
license = "MIT OR Apache-2.0"
keywords = ["waveform", "signal", "testing", "embedded", "no-std"]
categories = ["development-tools::testing", "embedded", "no-std"]

[dependencies]
log = "0.4.29"
num-traits = "0.2.19"
heapless = "0.8"

[features]
default = ["std"]  # `std` is on by default
std = []

[dev-dependencies]
test-log = "0.2.19"
